@@ -10,23 +10,19 @@
 #include <fost/parse/json.hpp>
 
 
-const fostlib::json_string_parser fostlib::json_string_p;
-const fostlib::json_parser fostlib::json_p;
-
-
 #include <fost/exception/parse_error.hpp>
 
 
 fostlib::json fostlib::json::parse( const string &toparse ) {
     fostlib::json ret;
-    if ( !boost::spirit::parse( coerce< std::wstring >( toparse ).c_str(), fostlib::json_p[ phoenix::var( ret ) = phoenix::arg1 ] ).full )
+    if ( !boost::spirit::parse( coerce< std::wstring >( toparse ).c_str(), fostlib::json_parser()[ phoenix::var( ret ) = phoenix::arg1 ] ).full )
         throw fostlib::exceptions::parse_error( L"Whilst parsing JSON string", toparse );
     return ret;
 }
 
 fostlib::json fostlib::json::parse( const string &toparse, const json &def ) {
     fostlib::json ret;
-    if ( !boost::spirit::parse( coerce< std::wstring >( toparse ).c_str(), fostlib::json_p[ phoenix::var( ret ) = phoenix::arg1 ] ).full )
+    if ( !boost::spirit::parse( coerce< std::wstring >( toparse ).c_str(), fostlib::json_parser()[ phoenix::var( ret ) = phoenix::arg1 ] ).full )
         return def;
     else
         return ret;
